Updated linking for ConvexDecomposition library in Collisions' Makefile

--- a/Collisions/src/Makefile.am
+++ b/Collisions/src/Makefile.am
@@ -33,5 +33,5 @@ libOgreBulletCol_la_SOURCES = \
 
 libOgreBulletCol_la_LIBADD = \
  $(OGRE_LIBS) \
- $(bullet_LIBS)
-
+ $(bullet_LIBS) \
+ -lConvexDecomposition
