--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,64 @@
 # Compiled source #
 ###################
-*.com
-*.class
-*.dll
-*.exe
 *.o
 *.so
+*.lo
+*.la
+Collisions/src/.libs/*
+Dynamics/src/.libs/*
+
+# autogen.sh files #
+####################
+Collisions/Makefile.in
+Collisions/include/Debug/Makefile.in
+Collisions/include/Makefile.in
+Collisions/include/Shapes/Makefile.in
+Collisions/include/Utils/Makefile.in
+Collisions/src/Makefile.in
+Dynamics/Makefile.in
+Dynamics/include/Constraints/Makefile.in
+Dynamics/include/Makefile.in
+Dynamics/include/Prefab/Makefile.in
+Dynamics/src/Makefile.in
+Makefile.in
+aclocal.m4
+autom4te.cache/
+compile
+config.guess
+config.h.in
+config.sub
+configure
+depcomp
+install-sh
+ltmain.sh
+missing
+
+# ./configure files #
+#####################
+Collisions/Makefile
+Collisions/include/Debug/Makefile
+Collisions/include/Makefile
+Collisions/include/Shapes/Makefile
+Collisions/include/Utils/Makefile
+Collisions/src/.deps/
+Collisions/src/Makefile
+Dynamics/Makefile
+Dynamics/include/Constraints/Makefile
+Dynamics/include/Makefile
+Dynamics/include/Prefab/Makefile
+Dynamics/src/.deps/
+Dynamics/src/Makefile
+Makefile
+OgreBullet.pc
+config.h
+config.status
+libtool
+stamp-h1
+
  
-# Packages #
-############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
- 
-# Logs and databases #
-######################
+# Logs  #
+#########
 *.log
-*.sql
-*.sqlite
  
 # OS generated files #
 ######################
